WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128390
WebGL doesn't update with remotely hosted layers
https://bugs.webkit.org/show_bug.cgi?id=128390
Summary
WebGL doesn't update with remotely hosted layers
Dean Jackson
Reported
2014-02-07 13:11:18 PST
WebGL doesn't push frames when attached to a remote layer host.
Attachments
Patch
(6.00 KB, patch)
2014-02-07 13:19 PST
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-02-07 13:12:24 PST
<
rdar://problem/15260182
>
Dean Jackson
Comment 2
2014-02-07 13:19:37 PST
Created
attachment 223489
[details]
Patch
Simon Fraser (smfr)
Comment 3
2014-02-07 13:33:28 PST
Comment on
attachment 223489
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223489&action=review
> Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.h:51 > + bool m_providesContents;
You forgot to initialize this in the ctor.
> Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.mm:62 > + m_providesContents = [customLayer isKindOfClass:[WebGLLayer class]];
I think you could do this with the classname without pulling in WebGLLayer.h
Dean Jackson
Comment 4
2014-02-07 13:37:20 PST
Comment on
attachment 223489
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223489&action=review
>> Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.h:51 >> + bool m_providesContents; > > You forgot to initialize this in the ctor.
It's initalised in the ctor body.
>> Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.mm:62 >> + m_providesContents = [customLayer isKindOfClass:[WebGLLayer class]]; > > I think you could do this with the classname without pulling in WebGLLayer.h
Yeah, I'm now trying to get there via GraphicsLayer
Dean Jackson
Comment 5
2014-02-07 14:07:57 PST
Committed
r163646
: <
http://trac.webkit.org/changeset/163646
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug