Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.h
@@ -41,11 +41,14 @@ public:
 
     virtual uint32_t hostingContextID() override;
 
+    virtual void setNeedsDisplay(const WebCore::FloatRect* dirtyRect = 0) override;
+
 private:
     PlatformCALayerRemoteCustom(PlatformLayer*, WebCore::PlatformCALayerClient* owner, RemoteLayerTreeContext*);
 
     std::unique_ptr<LayerHostingContext> m_layerHostingContext;
     RetainPtr<PlatformLayer> m_platformLayer;
+    bool m_providesContents;
 };
 
 } // namespace WebKit
